fix box shadows on mobile

--- a/app/scss/components/blog.scss
+++ b/app/scss/components/blog.scss
@@ -11,15 +11,20 @@
 }
 
 .blog-card {
-  box-shadow: $bs-1;
   display: flex;
   flex-direction: column;
   margin: $spacing-xs 0;
   overflow: hidden;
   width: 100%;
 
+  @include bp('600px') {
+    box-shadow: $bs-1;
+  };
+
   iframe {
-    box-shadow: $bs-2;
+    @include bp('600px') {
+      box-shadow: $bs-2;
+    };
   }
 
   &:nth-of-type(1) {
