--- a/app/scss/helpers/_extends.scss
+++ b/app/scss/helpers/_extends.scss
@@ -1,10 +1,13 @@
 %title {
   @include type-setting(2);
   background-color: $black;
-  box-shadow: $bs-1;
   color: $white;
   display: inline-flex;
   font-family: $font__family--primary;
   font-weight: 100;
   padding: $spacing-sm $spacing;
+
+  @include bp('600px') {
+    box-shadow: $bs-1;
+  };
 }
